Hyperion: Simplify brief authoring and harden generation feedback