@@ -3,14 +3,10 @@ package de.tum.cit.aet.artemis.hyperion.service.exercisegeneration;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 import static org.mockito.Mockito.doReturn;
 
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicBoolean;
 
-import org.apache.commons.io.FileUtils;
 import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -31,16 +27,12 @@ import de.tum.cit.aet.artemis.hyperion.service.exercisegeneration.orchestration.
 import de.tum.cit.aet.artemis.localci.service.LocalCIEventListenerService;
 import de.tum.cit.aet.artemis.localci.service.LocalCIResultListenerService;
 import de.tum.cit.aet.artemis.localci.service.LocalCIResultProcessingService;
-import de.tum.cit.aet.artemis.localvc.service.LocalVCRepositoryUri;
 import de.tum.cit.aet.artemis.programming.AbstractProgrammingIntegrationLocalCILocalVCTestBase;
-import de.tum.cit.aet.artemis.programming.domain.ProgrammingExercise;
-import de.tum.cit.aet.artemis.programming.domain.Repository;
-import de.tum.cit.aet.artemis.programming.domain.RepositoryType;
 import de.tum.cit.aet.artemis.programming.service.ProgrammingExerciseCreationUpdateService;
 
 /**
  * Shared setup for deterministic mocked-model generation and adaptation tests that run the sandbox, builds, and verifier against Docker. Every test here builds a real exercise
- * inside the network-isolated generation sandbox, so each is skipped individually — with the reason — when this machine cannot provide that; see
+ * inside the generation sandbox. Only local environments without Docker skip these tests; incompatible images fail. See
  * {@link HyperionMockedLlmE2eSupport#sandboxSkipReason()}.
  */
 abstract class AbstractHyperionMockedLlmEndToEndTest extends AbstractProgrammingIntegrationLocalCILocalVCTestBase {
@@ -164,53 +156,4 @@ abstract class AbstractHyperionMockedLlmEndToEndTest extends AbstractProgramming
         };
     }
 
-    protected ProgrammingExercise useOfflineMavenPluginVersions(ProgrammingExercise exercise) throws Exception {
-        LocalVCRepositoryUri uri = exercise.getRepositoryURI(RepositoryType.TESTS);
-        Repository repository = gitService.getOrCheckoutRepository(uri, true, localVCLocalCITestService.getDefaultBranch(), true);
-        Path pom = repository.getLocalPath().resolve("pom.xml");
-        String original = Files.readString(pom);
-        String updated = original;
-        updated = replaceRequiredPomFragment(original, updated, "<version>3.13.0</version>", "<version>3.14.0</version>");
-        updated = replaceRequiredPomFragment(original, updated, "<version>3.2.5</version>", "<version>3.5.3</version>");
-        updated = replaceRequiredPomFragment(original, updated, "<version>3.4.1</version>", "<version>3.6.1</version>");
-        updated = replaceRequiredPomFragment(original, updated, "<argLine>-Dfile.encoding=UTF-8</argLine>",
-                "<argLine>-Dfile.encoding=UTF-8 -Djava.security.manager=allow</argLine>");
-        if (updated.contains("artemis-java-test-sandbox") && !updated.contains("<artifactId>slf4j-api</artifactId>")) {
-            updated = updated.replaceFirst("(?m)^\\s*<dependencies>\\s*$", """
-                    <dependencyManagement>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.slf4j</groupId>
-                                <artifactId>slf4j-api</artifactId>
-                                <version>2.0.12</version>
-                            </dependency>
-                            <dependency>
-                                <groupId>net.bytebuddy</groupId>
-                                <artifactId>byte-buddy</artifactId>
-                                <version>1.17.7</version>
-                            </dependency>
-                        </dependencies>
-                    </dependencyManagement>
-                    <dependencies>""");
-        }
-        if (updated.contains("artemis-java-test-sandbox") && !updated.contains("<artifactId>slf4j-api</artifactId>")) {
-            throw new IllegalStateException("Could not inject offline dependency management into generated Java test pom.xml.");
-        }
-        if (!updated.equals(original)) {
-            FileUtils.writeStringToFile(pom.toFile(), updated, StandardCharsets.UTF_8);
-            gitService.stageAllChanges(repository);
-            gitService.commitAndPush(repository, "Use Maven plugins cached in the Docker verifier image", false, null);
-        }
-        return exercise;
-    }
-
-    private String replaceRequiredPomFragment(String original, String updated, String oldFragment, String newFragment) {
-        if (original.contains(oldFragment)) {
-            return updated.replace(oldFragment, newFragment);
-        }
-        if (original.contains(newFragment)) {
-            return updated;
-        }
-        throw new IllegalStateException("Generated Java test pom.xml no longer contains the expected Maven fragment: " + oldFragment);
-    }
 }
